--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<packaging>pom</packaging>
 
-	<groupId>com.tinqinacademy</groupId>
+	<groupId>com.tinqinacademy.authentication</groupId>
 	<artifactId>authentication</artifactId>
 	<version>${revision}</version>
 	<name>authentication</name>
@@ -18,6 +18,9 @@
 	<properties>
 		<java.version>21</java.version>
 		<revision>0.0.1-SNAPSHOT</revision>
+		<swaggerversion>2.6.0</swaggerversion>
+		<jakartaversion>3.1.0</jakartaversion>
+		<jacksondataformatversion>2.17.2</jacksondataformatversion>
 		<flattenmavenversion>1.2.7</flattenmavenversion>
 	</properties>
 
@@ -44,6 +47,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+			<version>${jacksondataformatversion}</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>io.vavr</groupId>
+			<artifactId>vavr</artifactId>
+			<version>0.10.4</version>
 		</dependency>
 	</dependencies>
 
