--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.boot.admin.client.url=http://localhost:8089/
 spring.boot.admin.client.instance.management-url=http://localhost:8082/actuator
 spring.boot.admin.client.instance.service-url=http://localhost:8082/
 spring.boot.admin.client.instance.health-url=http://localhost:8082/actuator/health
+
+#security
+spring.security.user.name=admin
+spring.security.user.password=admin
