--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.boot.admin.client.instance.health-url=http://localhost:8082/actuator/heal
 #security
 spring.security.user.name=admin
 spring.security.user.password=admin
+
+security.jwt.secret-key=your_secret_key_base64_encoded
+security.jwt.expiration-time=300000
