implemented better RegisterUserOperationProcessor, LoginUserOperationProcessor and ConfirmRegistrationOperationProcessor, added new CustomApplicationRunner logic to create an authorised user, started implementing PromoteUser and DemoteUser, added RoleType enum, fixed jwt secret key

--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.hibernate.ddl-auto=update
+
 #admin
 management.endpoints.web.exposure.include=*
 spring.boot.admin.client.url=http://localhost:8089/
@@ -16,5 +18,5 @@ spring.boot.admin.client.instance.health-url=http://localhost:8082/actuator/heal
 spring.security.user.name=admin
 spring.security.user.password=admin
 
-security.jwt.secret-key=your_secret_key_base64_encoded
+security.jwt.secret-key=Ii0+chKK1IGIqR/74lkVCjEILdOc/SRXa7ji8LnOQPQ=
 security.jwt.expiration-time=300000
