Implemented logic in RecoverPassword and RegisterUser operations, created EmailFeignClient and added dependency on email microservice's restexport

--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -15,7 +15,11 @@
 
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.tinqinacademy.email</groupId>
+            <artifactId>restexport</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
