email feign client is not working when composing up with docker, all logic works well

--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
 
 #admin
 management.endpoints.web.exposure.include=*
@@ -20,3 +22,6 @@ spring.security.user.password=admin
 
 security.jwt.secret-key=Ii0+chKK1IGIqR/74lkVCjEILdOc/SRXa7ji8LnOQPQ=
 security.jwt.expiration-time=300000
+
+EMAIL_HOST=http://localhost:8083
+email.service.url=${EMAIL_HOST}
